--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT=3001
-DB_HOST='127.0.0.1'
-DB_USERNAME='postgres'
-DB_PASSWORD='postgres'
+//PORT=3001
+//DB_HOST='127.0.0.1'
+//DB_USERNAME='postgres'
+//DB_PASSWORD='postgres'
